tenzir/integration/data/reference/expression/test_universal_function_call_syntax/step_03.ref
error: expected additional positional argument `<string>`
 --> /dev/stdin:1:11
  |
1 | from { x: starts_with("abc") }
  |           ^^^^^^^^^^^ 
  |
  = usage: starts_with(<string>, <string>)
  = docs: https://docs.tenzir.com/functions/starts_with